syntax = "proto3";

package bridge;

option go_package = "bridge";

enum MessageType {
	request = 0;
	response = 1;
}

message HttpHeader {
    string Key = 1;
    string Value = 2;
}

// WireMessage used to transmit HTTP header information and body across WebRTC in chunks
message WireMessage {
    string SessionId = 1;
    MessageType Type = 2;
    string Method = 3;
    bytes URL = 4;
    repeated HttpHeader Header = 5;
    bytes Body = 6;
    uint32 Size = 7;
    uint32 Oridinal = 8;
    bool Compressed = 9;
}
